--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -109,7 +109,7 @@ body {
 #app_content .grid-container {
   flex:1;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: flex-start;
   gap: 15px;
 }
@@ -165,10 +165,9 @@ body {
 
 /* GRID */
 #app_content .grid-container .grid {
-  flex: 1;
   box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.20);
   display: grid;
-  grid-template: repeat(10, 50px) / repeat(10, 1fr);
+  grid-template: repeat(10, 40px) / repeat(10, 40px);
   gap:3px;
 }
 
@@ -334,6 +333,10 @@ body {
     flex: 0.05;
   }
 
+  /* GRID */
+  #app_content .grid-container .grid {
+    grid-template: repeat(10, 30px) / repeat(10, 30px);
+  }
 }
  
  
